--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,78 +1,95 @@
 body {
-    margin: 0px;
-    font-family: 'Mulish', sans-serif;
-    background-color: #85FFBD;
-    background-image: -webkit-linear-gradient(225deg, #85FFBD 0%, #FFFB7D 100%);
-    background-image: -moz-linear-gradient(225deg, #85FFBD 0%, #FFFB7D 100%);
-    background-image: -o-linear-gradient(225deg, #85FFBD 0%, #FFFB7D 100%);
-    background-image: linear-gradient(225deg, #85FFBD 0%, #FFFB7D 100%);
-}
-.header {
-    background-color: #85FFBD;
-    background-image: -webkit-linear-gradient(225deg, #85FFBD 0%, #FFFB7D 100%);
-    background-image: -moz-linear-gradient(225deg, #85FFBD 0%, #FFFB7D 100%);
-    background-image: -o-linear-gradient(225deg, #85FFBD 0%, #FFFB7D 100%);
-    background-image: linear-gradient(225deg, #85FFBD 0%, #FFFB7D 100%);
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.header__img {
-    width: 80px;
-}
-.header__menu {
-    margin-right: 30px;
-}
-.header__menu ul {
-    display: none;
-    list-style: none;
-    padding: 0px;
-    position: absolute;
-    width: 100px;
-    text-align: right;
-    margin: 0px 0px 0px -14px;
-}
+        margin: 0px;
+        font-family: 'Mulish', sans-serif;
+        background-color: #FBDA61;
+        background-image: -webkit-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
+        background-image: -moz-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
+        background-image: -o-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
+        background-image: linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
 
-.header__menu:hover ul, ul:hover {
-    display: block;
-}
+    }
+    .header {
+        background-color: #FBDA61;
+        background-image: -webkit-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
+        background-image: -moz-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
+        background-image: -o-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
+        background-image: linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
+        width: 100%;
+        height: 80px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-.header__menu li {
-    margin: 10px 0px;
-}
+    .header__img {
+        width: 170px;
+    }
 
-.header__menu li a{
-    color: white;
-    text-decoration: none;
-}
+    .header__menu {
+        margin-right: 30px;
+    }
 
-.header__menu li a:hover {
-    text-decoration: underline;
-}
+    .header__menu ul {
+        display: none;
+        list-style: none;
+        padding: 0px;
+        position: absolute;
+        width: 100px;
+        text-align: right;
+        margin: 0px 0px 0px -14px;
+    }
 
-.header__menu--profile {
-    margin-right: 8px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
+    .header__menu:hover ul, ul:hover {
+        display: block;
+    }
 
-.header__menu--profile p {
-    margin: 0px;
-    color: white;
-}
+    .header__menu li {
+        margin: 10px 0px;
+    }
 
-.main {
-    height: 300px;
-}
+    .header__menu li a{
+        color: white;
+        text-decoration: none;
+    }
 
-.main__title {
-    color: white;
-    font-size: 25px;
-}
+    .header__menu li a:hover {
+        text-decoration: underline;
+    }
 
-.input {
-    
-}
+    .header__menu--profile {
+        margin-right: 8px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .header__menu--profile p {
+        margin: 0px;
+        color: white;
+    }
+
+    .main {
+        height: 300px;
+    }
+
+    .main__title {
+        color: white;
+        font-size: 25px;
+    }
+
+    .input {
+        border: 2px solid white;
+        border-radius: 25px;
+        color: white;
+        font-size: 'Mulish', sans-serif;
+        font-size: 16px;
+        height: 50px;
+        padding: 0px 20px;
+        width: 70%;
+        background-color: rgba(255, 255, 255, 0.1);
+        outline: none;
+    }
+
+    ::placeholder {
+        color: white;
+    }
