--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,19 +1,8 @@
 body {
         margin: 0px;
-        font-family: 'Mulish', sans-serif;
-        background-color: #FBDA61;
-        background-image: -webkit-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
-        background-image: -moz-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
-        background-image: -o-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
-        background-image: linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
-
+        background: linear-gradient( #00DBDE, #FC00FF);
     }
     .header {
-        background-color: #FBDA61;
-        background-image: -webkit-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
-        background-image: -moz-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
-        background-image: -o-linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
-        background-image: linear-gradient(90deg, #FBDA61 0%, #FF5ACD 100%);
         width: 100%;
         height: 80px;
         display: flex;
@@ -75,13 +64,82 @@ body {
     .main__title {
         color: white;
         font-size: 25px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .carousel {
+        width: 100%;
+        overflow: scroll;
+        padding: 30px;
+        position: relative;
+    }
+
+    .carousel__container {
+        white-space: nowrap;
+        margin: 70px 0px;
+        padding-bottom: 10px;
+    }
+
+    .carousel-item {
+        background-color: slateblue;
+        width: 200px;
+        height: 250px;
+        border-radius: 20px;
+        overflow: hidden;
+        margin-right: 10px;
+        display: inline-block;
+        cursor: pointer;
+        transition: 450ms all;
+        transform-origin: center left;
+        position: relative;
+    }
+
+    .carousel-item:hover ~ .carousel-item{
+        transform: translate3d(100px, 0px, 0px);
+    }
+
+    .carousel__container:hover .carousel-item {
+        opacity: 0.3;
+    }
+
+    .carousel-item:hover.carousel-item:hover {
+        transform: scale(1.5);
+        opacity: 1;
+    }
+
+    .carousel-item__img {
+        width: 200px;
+        height: 250px;
+        object-fit: cover;
+    }
+
+    .carousel-item__details {
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.9) 100%);
+        font-size: 10px;
+        opacity: 0;
+        transition: 450ms opacity;
+        padding: 10px;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+    }
+
+    .categories__title {
+        color: white;
+        font-size: 16px;
+        position: absolute;
+        padding-left: 30px;
+        width: 100%;
     }
 
     .input {
         border: 2px solid white;
         border-radius: 25px;
         color: white;
-        font-size: 'Mulish', sans-serif;
+        font-family: 'Mulish', sans-serif;
         font-size: 16px;
         height: 50px;
         padding: 0px 20px;
@@ -92,4 +150,147 @@ body {
 
     ::placeholder {
         color: white;
+    }
+
+    .login {
+        background: linear-gradient( #00DBDE, #FC00FF);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 0px 30px;
+        min-height: calc(100vh - 200px);
+        
+    }
+
+    .login__container {
+        background-color: rgba(255, 255, 255, 0.1);
+        border: 2px solid white;
+        border-radius: 40px;
+        color: white;
+        padding: 60px 68px 40px;
+        min-height: 700px;
+        width: 300px;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    .login__container--form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .login__container--form label{
+        font-size: 14px;
+    }
+
+    .login__container--remember-me {
+        color: white;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+    }
+
+    .login__container--form--remember-me a {
+        color: white;
+        font-size: 14px;
+        text-decoration: none;
+    }
+
+    .login__container--form--remember-me a:hover {
+        text-decoration: underline;
+    }
+
+    .login__container--social-media {
+        display: flex;
+        align-items: center;
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+
+    .login__container--social-media > div > img {
+        width: 30px;
+        margin-right: 10px;
+    }
+
+    .login__container--register {
+        font-size: 14px;
+    }
+
+    .login__container--register a {
+        font-size: 16px;
+        color: white;
+        font-weight: bold;
+        text-decoration: none;
+    }
+
+    .login__container--register a:hover {
+        text-decoration: underline;
+    }
+
+    .input {
+        background-color: transparent;
+        border-left: 0px;
+        border-right: 0px;
+        border-top: 0px;
+        border-bottom: 2px solid white;
+        font-family: 'Mulish', sans-serif;
+        font-size: 16px;
+        margin-bottom: 20px;
+        padding: 0p 20px;
+        outline: none;
+        height: 50px;
+        width: 260px;
+    }
+
+    ::placeholder {
+        color: white;
+    }
+
+    .button {
+        background-color: rgba(255, 255, 255, 0.2);
+        border: none;
+        border-radius: 25px;
+        color: white;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: bold;
+        font-family: 'Mulish', sans-serif;
+        height: 50px;
+        letter-spacing: 1px;
+        margin: 10px 0px;
+    }
+
+    .footer {
+        display: flex;
+        align-items: center;
+        height: 100px;
+        width: 100%;
+    }
+
+    .footer a {
+        color: white;
+        cursor: pointer;
+        font-size: 14px;
+        padding-left: 30px;
+        text-decoration: none;
+    }
+
+    .footer a:hover {
+        text-decoration: underline;
+    }
+
+    @media only screen and (max-width: 600px) {
+        .login__container {
+            background-color: transparent;
+            border: none;
+            padding: 0px;
+            width: 100%;
+        }
+
+        footer {
+            align-items: flex-start;
+            flex-direction: column;
+        }
     }
